--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node build/index.js",
+    "start": "node build/index.js",
     "test": "test"
   },
   "keywords": [
