--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-YOOBU_LOGISTIC_API_URL="http://[IP_SERVER]/api/sync-db"
+YB_WP_DB_URL="mysql://[BD_USER_NAME]:[BD_USER_PASS]@[DB_HOST]:[HOST_PORT]/[DB_NAME]" # Base racine (WP)
+YB_LOGISTIC_DB_URL="mysql://[BD_USER_NAME]:[BD_USER_PASS]@[DB_HOST]:[HOST_PORT]/[DB_NAME]" # Base Logistic
