--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "postinstall": "npm run generate",
     "generate": "npx prisma generate --schema db/prisma_yb_logistic/schema.prisma && npx prisma generate --schema db/prisma_yb_wp/schema.prisma",
-    "build": "tsc && cp -r src/generated build/generated",
+    "build": "tsc && cpx \"src/generated/**/*\" build/generated",
     "sync:db": "node build/sync-db.js",
     "start": "node build/index.js",
     "test": "test"
@@ -19,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "cpx": "^1.5.0",
     "prisma": "^6.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
