--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,5 @@
 {
   "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
-    },
     "moduleResolution": "node",
     "module": "esnext",
     "target": "es2016",
@@ -11,7 +8,10 @@
     "strict": true,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "outDir": "./build",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "build"]
