--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
+# .env.example
 YB_WP_DB_URL="mysql://[BD_USER_NAME]:[BD_USER_PASS]@[DB_HOST]:[HOST_PORT]/[DB_NAME]" # Base racine (WP)
 YB_LOGISTIC_DB_URL="mysql://[BD_USER_NAME]:[BD_USER_PASS]@[DB_HOST]:[HOST_PORT]/[DB_NAME]" # Base Logistic
